<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#695E5E"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="2dp"
        android:ems="10"
        android:hint="@string/PleaseEnterYourEmailHere"
        android:inputType="textEmailAddress"
        android:background="#2196F3"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:fontFamily="@font/amita"
        android:importantForAutofill="no" tools:targetApi="o" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="2dp"
        android:ems="10"
        android:hint="@string/PleaseEnterYourUsernameHere"
        android:inputType="textPersonName"
        android:background="#2196F3"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:fontFamily="@font/amita"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="2dp"
        android:hint="@string/PleaseEnterYourPasswordHere"
        android:inputType="textPassword"
        android:background="#2196F3"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:fontFamily="@font/amita"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <LinearLayout
        android:id="@+id/LinearLayoutHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/btnSignUp"
            android:background="#EE8F8F"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:fontFamily="@font/amita"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/btnSignIn"
            android:background="#EE8F8F"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:fontFamily="@font/amita"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>